# kattis

./: .gitignore  10kind.cc  2048.cc  3dprinter.cc  3sideddice.cc  4thought.cc  CMakeLists.txt  README.md  a1paper.cc  aaah.cc  sequences.cc
